--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 	<div>
 	<h1>Hi, I'm Jeremiah</h1>
-	<p>Welcome! This site is a list of my current and past projects. test123</p> 
+	<p>Welcome! This site is a list of my current and past projects. 20px</p> 
 	
 	<p>If you'd like to connect with me, please reach out via <a href="https://www.linkedin.com/in/		
 	jeremiahstephan/">LinkedIn</a> or email me at jeremiah.stephan [at] gmail.com.</p>
