--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 	<div>
 	<h1>Hi, I'm Jeremiah</h1>
+	
 	<p>Welcome! This site is a list of my current and past projects. 20px</p> 
 	
 	<p>If you'd like to connect with me, please reach out via <a href="https://www.linkedin.com/in/		
@@ -27,9 +28,10 @@
 	<hr class="gray-line"> <!-- Horizontal line at the top -->
 	<h3>Law Related</h3>
 	<div class="index">
-	<a href="legalaid.html">Directory - Illinois Pro Bono Organizations</a><br>
-	<a href="lex.html">Healthcare Law - Words and Phrases Glossary</a><br>
-	<a href="smoke.html">Smoke Alarm Laws for Naperville</a><br>
+	<a href="legalaid.html">Sortable list of Illinois Pro Bono Clinics</a><br>
+	<a href="lex.html">Glossary for Healthcare Law</a><br>
+	<a href="smoke.html">Naperville's Smoke Alarm Laws</a><br>
+	<a href="https://repository.law.uic.edu/cgi/viewcontent.cgi?article=1195&context=lawreview">Veterans, PTSD, & USERRA</a>
 	<a href=""></a>
 	<a href=""></a>
 	</div>
@@ -48,7 +50,7 @@
     <h3>Misc Projects</h3>
 	<div class="index">
 	<a href="https://www.youtube.com/channel/UC9FjmhQV5fT_v7nPIO5SAzQ">100 Rental Cars</a><br>
-	<a href="https://repository.law.uic.edu/cgi/viewcontent.cgi?article=1195&context=lawreview">Battling PTSD</a>
+	
 	<a href=""></a>
 	<a href=""></a>
 	<a href=""></a>
