--- a/tyler.html
+++ b/tyler.html
@@ -17,6 +17,21 @@
 		color: #484848;
 	}
 
+#joke {
+  margin: 20px;
+  padding: 10px;
+}
+
+#joke p {
+  margin: 0;
+  font-size: 18px;
+}
+
+#answer {
+  background-color: #f9f9f9;
+  border-radius: 5px;
+}
+
 </style>
 </head>
 <body>  
@@ -27,11 +42,26 @@
 
 <hr class="gray-line"> <!-- Gray horizontal line at the bottom -->
 
-<a href="POW1.jpg" download="Square">
-  <img src="POW1.jpg" alt="Square">
-</a>
+<p>The answer to your POW is 12! You're welcome!</p>
 
-<script src="script.js"></script>
+<div id="joke" style="cursor: pointer;">
+  <p>Why don't scientists trust atoms anymore?</p>
+  <div id="answer" style="display: none; padding: 10px; border: 1px solid #ccc; margin-top: 10px;">
+    Because they make up everything!
+  </div>
+</div>
+
+<script>
+document.getElementById("joke").onclick = function() {
+  var answer = document.getElementById("answer");
+  if (answer.style.display === "none") {
+    answer.style.display = "block";
+  } else {
+    answer.style.display = "none";
+  }
+};
+</script>
+
 </body>
 
 <footer id="footer">
