--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<div>
 	<h1>Hi, I'm Jeremiah</h1>
 	
-	<p>Welcome! This site is a list of my current and past projects. 20px</p> 
+	<p>Welcome! This site is a list of my current and past projects.</p> 
 	
 	<p>If you'd like to connect with me, please reach out via <a href="https://www.linkedin.com/in/		
 	jeremiahstephan/">LinkedIn</a> or email me at jeremiah.stephan [at] gmail.com.</p>
@@ -35,6 +35,17 @@
 	<a href=""></a>
 	<a href=""></a>
 	</div>
+   	<br>
+   	
+   	<h3>Presentations</h3>
+   	<div class="index">
+   	<a href="https://docs.google.com/presentation/d/1RC-EHs9uTHXCdIuQtpqheoGjAVE9aZu2zQxmI6sAtf0/edit?usp=sharing">Mill Street Elementary - Child Support Math</a><br>
+   	<a href="https://docs.google.com/presentation/d/1juaLNud8GL4-HGUDMIurKgBjGYdLWNqVpV-4faER498/edit?usp=sharing">LTDO - Legislative Update 2</a><br>
+   	<a href="https://docs.google.com/presentation/d/1jcSox5kB4afdDBUHzMaxbkP3NCIrSGpnzqUalB-Yzo0/edit?usp=sharing">LTDO - PC Petition Requirements</a><br>
+   	<a href="https://docs.google.com/presentation/d/1mRSal8hsrzfp7Skin2SeYJNNVgvaFagtet70PI91QSk/edit?usp=sharing">LTDO - Legislative Update 1</a><br>
+   	<a href="https://docs.google.com/presentation/d/1I7ca0V7CT140JzF-BC2mWVYPsWTTj7P3mgwPgKwM7_0/edit?usp=sharing">Illinois Armed Forced Legal Aid Network - Child Support Calculations</a><br>
+   	<a href=""></a><br>
+   	</div>
    	<br>
    	
    	<h3>Learning Korean</h3>
