--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 	<a href="Korean400.html">400 most common words</a><br>
 	<a href="korean-resources.html">Tools & Resources</a><br>
 	<a href="korean-haircut.html">Haircuts</a><br>
-	<a href=""></a>
+	<a href="hada.html">하다</a>
 	<a href=""></a>
 	</div>
    	<br>
