--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
    	<h3>Learning Korean</h3>
 	<div class="index">
 	<a href="Korean400.html">400 most common words</a><br>
+	<a href="hada.html">하다</a><br>
 	<a href="korean-resources.html">Tools & Resources</a><br>
 	<a href="korean-haircut.html">Haircuts</a><br>
-	<a href="hada.html">하다</a>
 	<a href=""></a>
 	</div>
    	<br>
